<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/zup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/zup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/zup"
                android:scaleType="fitXY" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                android:background="@drawable/background"
                android:textColorHint="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:elegantTextHeight="true"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/last_name"
                android:background="@drawable/background"
                android:textColorHint="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:elegantTextHeight="true"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:hint="@string/phone"
                android:background="@drawable/background"
                android:textColorHint="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:elegantTextHeight="true"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/mobile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:hint="@string/mobile_phone"
                android:background="@drawable/background"
                android:textColorHint="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:elegantTextHeight="true"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                android:hint="@string/cpf"
                android:background="@drawable/background"
                android:textColorHint="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:elegantTextHeight="true"
                android:textAlignment="center"/>

            <Spinner
                android:id="@+id/school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background"
                android:textAppearance="?android:textAppearanceSmall"
                android:elegantTextHeight="true"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/adress"
                android:background="@drawable/background"
                android:textColorHint="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:elegantTextHeight="true"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/neighborhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/neighborhood"
                android:background="@drawable/background"
                android:textColorHint="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:elegantTextHeight="true"
                android:textAlignment="center"/>

            <Spinner
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background"
                android:textAppearance="?android:textAppearanceSmall"
                android:elegantTextHeight="true"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/passwprd"
                android:background="@drawable/background"
                android:textColorHint="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:elegantTextHeight="true"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/passwordConfim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/password_confirm"
                android:background="@drawable/background"
                android:textColorHint="@android:color/black"
                android:textAppearance="?android:textAppearanceSmall"
                android:elegantTextHeight="true"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/button_send"
                android:background="@drawable/background"
                android:textAppearance="?android:textAppearanceButton"
                android:elegantTextHeight="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>